deployments/arr/readarr/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr-service
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 8787
      targetPort: readarr
  selector:
    app: readarr
    part-of: readarr
