deployments/arr/readarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr-ingress
  namespace: media
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.readarr.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: readarr-service
          port: 8787
    - match: Host(`readarr.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: readarr-service
          port: 8787
      middlewares:
        - name: media-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
